--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "test":"jest",
+    "test:report":"jest --coverage"
   },
   "keywords": [],
   "author": "prince tanwar",
@@ -20,6 +22,7 @@
     "validator": "^13.1.1"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^2.0.4"
   }
 }
