--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test":"jest",
+    "test:watch":"jest --watch",
     "test:report":"jest --coverage"
   },
   "keywords": [],
